# RasterizerC

./: CMakeLists.txt  cbuild.json  compile_commands.json
.cache/clangd/index/: draw.c.A69DA29EDE3039BE.idx  main.c.950FD02D13190C66.idx  mathplus.h.1CFD2E1B46CF0503.idx  mathplus.h.59BDBD04526D8D37.idx  matrix4x4.c.9C57237F030454DF.idx  matrix4x4.c.FD154B7E9FDF8B20.idx  matrix4x4.h.AAC08350A3AF0979.idx  matrix4x4.h.E79600AA315ACF09.idx  pipeline.c.BCA134760CD18E81.idx  pipeline.h.E0566C33552E5957.idx  projection.c.0CD2ED1470DDA8F1.idx  projection.h.16BFFFD0786AA77F.idx  screen.c.F2FCF0DE6A37D203.idx  screen.h.320182DA98932F15.idx  triangle.c.EC9B441D5DAA9BD1.idx  triangle.h.78CF209EDD36DA71.idx  units.h.3292B6BA7BE32DB0.idx  vector2.c.04E32437527E3BEA.idx  vector2.c.0F2EE6ACE994F7CE.idx  vector2.h.10E4C2E9EDFD71FE.idx  vector2.h.1713C2A30CFEAA81.idx  vector3.c.2A61F3451F3267B0.idx  vector3.c.BE8B573C100506AF.idx  vector3.h.3AE2110F8DE53238.idx  vector3.h.47A761DA216C92AC.idx  vector4.c.3ECDAEE5C5FF917C.idx  vector4.c.F91A8BF81683E670.idx  vector4.h.1D8FC2CEE109A0CE.idx  vector4.h.5E18431A6F04D584.idx
include/: loader.h  matrix4x4.h  pipeline.h  projection.h  screen.h  triangle.h  units.h  vector2.h  vector3.h  vector4.h
include/math/: mathplus.h  matrix4x4.h  vector3.h
src/: draw.c  loader.c  main.c  matrix4x4.c  pipeline.c  projection.c  screen.c  triangle.c  vector2.c  vector3.c  vector4.c
src/math/: matrix4x4.c  vector2.c  vector3.c  vector4.c
